versão (somente desktop) final

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <a href="" class="header-icons-link">
                 <img class="header-icons-img"  src="icons/coracao.svg">
             </a>
-            <a href="" class="header-icons-link">
+            <a href="" class="header-icons-link" class="">
                 <img  id="header-user-profile-pic" class="profile-pic" src="icons/user-profile-pic.jpg">
             </a>
         </div>
-    </header>
+    </header> <br><br><br>
     <main>
         <div id="main-content">
             <div id="post">
@@ -49,7 +49,7 @@
                         <img class="profile-pic" src="content/post-profile-pic.jpg">
                     </a>
                     <!-- profile link name-->
-                    <a href="">fluxo_ufrj</a>
+                    <a href="" class="profile-link-name">fluxo_ufrj</a>
                     <!-- dot separator -->
                     <img id="dot-icon" src="icons/dot.png">
                     <!-- follow button-->
@@ -57,18 +57,34 @@
                     <!-- -->
                     <img id="plus-icon" src="icons/mais.svg">
                 </div>
-                <div id="comments-area">
+                <div id="post-description-and-comments-area">
                     <a href="">
                         <img class="profile-pic" src="content/post-profile-pic.jpg">
-                    </a>
-                    <!-- profile link name-->
-                    
-                    <p>
-                        <a href="">fluxo_ufrj</a>
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                    </p>
+                    </a>                    
+                    <div id="post-description">
+                        
+                        <p><a href="" class="profile-link-name">fluxo_ufrj</a>Como está sendo o PAME até agora? </p> 
+                        <br>
+                        <p> Capturamos algumas opniões de nossos candidatos para compartilhar com vocês: </p>
+                        <br>
+                        <p>"Apesar de estar ainda no início, a experiência com o PAME tem sido incrível.  </p>
+                        <p> 
+                            As primeiras etapas do processo seletivo foram excelentes para mim. Um dos meus grandes defeitos é a dificuldade de me expressar 
+                            e as dinâmicas em grupo juntamente com a entrevista me ajudaram bastante nesse sentido. 
+                        </p>
+                        <br>
+                        <p>
+                            Diria que o único ponto negativo é ter que conciliar o tempo de dedicação para a realização das entregas com os trabalhos e provas do semestre 
+                            na UFRJ que também precisam ser entregues no prazo, porém, eu entendo perfeitamente como o estado atual do país forçou essa situação. Além disso, 
+                            manter a organização em contextos como esse é uma qualidade essencial para se dar bem no mercado de trabalho.
+                        </p>
+⠀                       <br>
+                        <p>
+                            Espero muito que o PAME continue sendo enriquecedor e me faça desenvolver boas qualidades técnicas e pessoais."
+                        </p>
+                        <p>Gabriel de Lima Moura</p>
+                        <p id="post-duration" class="date">10 sem</p>
+                    </div>
                 </div>
                 <div id="side-bar-footer">
                     <div id="side-bar-footer-icons">
@@ -82,9 +98,10 @@
                             <img class="profile-pic" src="icons/user-profile-pic.jpg">
                         </a>
                         <p>
-                            Curtido por <a href="" id="main-likes-user">gabriel.lima</a> e <a href="">outras 110 pessoas</a> 
+                            Curtido por <a href="" class="profile-link-name" id="main-likes-user">gabriel.lima</a> e <a href="">outras 110 pessoas</a> 
                         </p>
                     </div>
+                    <p id="date-of-post" class="date">13 de novembro de 2020</p>
                     <div id="side-bar-footer-comment">
                         <input type="text" placeholder="Adicione um comentário ..." id="comment-input">
                         <p>Publicar</p>
