versão (somente desktop) final 2 -> ajustes na sidebar (header e footer)

--- a/index.html
+++ b/index.html
@@ -44,18 +44,24 @@
             </div>
             <div id="side-bar">
                 <div id="side-bar-header">
-                    <!-- profile link pic -->
-                    <a href="">
-                        <img class="profile-pic" src="content/post-profile-pic.jpg">
-                    </a>
-                    <!-- profile link name-->
-                    <a href="" class="profile-link-name">fluxo_ufrj</a>
-                    <!-- dot separator -->
-                    <img id="dot-icon" src="icons/dot.png">
-                    <!-- follow button-->
-                    <a href="">Seguindo</a>
-                    <!-- -->
+                    <div id="side-bar-header-left-icons">
+                        <!-- profile link pic -->
+                        <a href="">
+                            <img class="profile-pic" src="content/post-profile-pic.jpg">
+                        </a>
+                        <!-- profile link name-->
+                        <a href="" class="profile-link-name">fluxo_ufrj</a>
+                        <!-- dot separator -->
+                        <img id="dot-icon" src="icons/dot.png">
+                        <!-- follow button-->
+                        <a href="">Seguindo</a> 
+                    </div>
+                    <div id="side-bar-header-right-icons">
+                        <!-- -->
                     <img id="plus-icon" src="icons/mais.svg">
+                    </div> 
+                    
+                    
                 </div>
                 <div id="post-description-and-comments-area">
                     <a href="">
@@ -88,10 +94,12 @@
                 </div>
                 <div id="side-bar-footer">
                     <div id="side-bar-footer-icons">
-                        <img class="side-bar-icons-pic" src="icons/coracao.svg">
-                        <img class="side-bar-icons-pic" src="icons/comente.svg">
-                        <img class="side-bar-icons-pic" src="icons/origami.svg">
-                        <img class="side-bar-icons-pic" src="icons/save.svg">
+                        <div id="side-bar-footer-left-icons">
+                            <img class="side-bar-icons-pic" src="icons/coracao.svg">
+                            <img class="side-bar-icons-pic" src="icons/comente.svg">
+                            <img class="side-bar-icons-pic" src="icons/origami.svg">
+                        </div>
+                        <img class="side-bar-icons-pic" id="save-icon" src="icons/save.svg">
                     </div>
                     <div id="side-bar-footer-likes">
                         <a href="" id="side-bar-likes-profile-pic">
