versão final (rotacao do icone origami e ajuste nas margens em side-bar-footer)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <img class="header-icons-img"  src="icons/navegador.svg">
             </a>
             <a href="" class="header-icons-link">
-                <img class="header-icons-img"  src="icons/origami.svg">
+                <img class="header-icons-img" id="origami-icon-1" src="icons/origami.svg">
             </a>            
             <a href="" class="header-icons-link">
                 <img class="header-icons-img" src="icons/bussola.svg">
@@ -97,7 +97,7 @@
                         <div id="side-bar-footer-left-icons">
                             <img class="side-bar-icons-pic" src="icons/coracao.svg">
                             <img class="side-bar-icons-pic" src="icons/comente.svg">
-                            <img class="side-bar-icons-pic" src="icons/origami.svg">
+                            <img class="side-bar-icons-pic" id="origami-icon-2" src="icons/origami.svg">
                         </div>
                         <img class="side-bar-icons-pic" id="save-icon" src="icons/save.svg">
                     </div>
