--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         
                         <p><a href="" class="profile-link-name">fluxo_ufrj</a>Como está sendo o PAME até agora? </p> 
                         <br>
-                        <p> Capturamos algumas opniões de nossos candidatos para compartilhar com vocês: </p>
+                        <p> Capturamos algumas opiniões de nossos candidatos para compartilhar com vocês: </p>
                         <br>
                         <p>"Apesar de estar ainda no início, a experiência com o PAME tem sido incrível.  </p>
                         <p> 
